[project]
name = "robust-char-lm"
version = "0.1.0"
description = "Simple project for training a robust character-level language model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "kaggle>=2.0.1",
    "torch>=2.2.0",
    "wandb>=0.25.1",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
